# macrotrace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/db_models/: index.html
0.1.0/assets/: schema.dbml
0.1.0/development/contributing/: index.html
0.1.0/development/testing/: index.html
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/guide/graphing/: index.html
0.1.0/guide/overview/: index.html
0.1.0/sources/custom/: index.html
0.1.0/sources/fred/: index.html
0.1.0/sources/ons/: index.html
0.1.0/sources/rtdsm/: index.html
0.1.0/workflows/detecting-metadata-changes-and-benchmark-revisions/: index.html
0.1.0/workflows/first-release-vs-final-release/: index.html
0.1.0/workflows/macrotrace-with-darts/: index.html
0.1.0/workflows/reconstructing-the-real-time-view/: index.html
0.1.0/workflows/reproducible-research-frozen-snapshots/: index.html
0.1.0/workflows/revision-diagnostics-for-researchers/: index.html
0.1.0/workflows/using-your-own-revisioned-data/: index.html
0.1.0rc1/: 404.html  index.html  sitemap.xml
0.1.0rc1/api/db_models/: index.html
0.1.0rc1/development/contributing/: index.html
0.1.0rc1/development/testing/: index.html
0.1.0rc1/getting-started/installation/: index.html
0.1.0rc1/getting-started/quickstart/: index.html
0.1.0rc1/guide/graphing/: index.html
0.1.0rc1/guide/overview/: index.html
0.1.0rc1/sources/custom/: index.html
0.1.0rc1/sources/fred/: index.html
0.1.0rc1/sources/ons/: index.html
0.1.0rc1/sources/rtdsm/: index.html
0.1.0rc1/workflows/detecting-metadata-changes-and-benchmark-revisions/: index.html
0.1.0rc1/workflows/first-release-vs-final-release/: index.html
0.1.0rc1/workflows/macrotrace-with-darts/: index.html
0.1.0rc1/workflows/reconstructing-the-real-time-view/: index.html
0.1.0rc1/workflows/reproducible-research-frozen-snapshots/: index.html
0.1.0rc1/workflows/revision-diagnostics-for-researchers/: index.html
0.1.0rc1/workflows/using-your-own-revisioned-data/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/db_models/: index.html
dev/development/contributing/: index.html
dev/development/testing/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/quickstart/: index.html
dev/guide/graphing/: index.html
dev/guide/overview/: index.html
dev/search/: search_index.json
dev/sources/custom/: index.html
dev/sources/fred/: index.html
dev/sources/ons/: index.html
dev/sources/rtdsm/: index.html
dev/workflows/detecting-metadata-changes-and-benchmark-revisions/: index.html
dev/workflows/first-release-vs-final-release/: index.html
dev/workflows/macrotrace-with-darts/: index.html
docs/: index.md
docs/api/: db_models.md
docs/development/: contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: graphing.md  overview.md
docs/sources/: custom.md  fred.md  ons.md  rtdsm.md
docs/workflows/: detecting-metadata-changes-and-benchmark-revisions.md  first-release-vs-final-release.md  macrotrace-with-darts.md  reconstructing-the-real-time-view.md  reproducible-research-frozen-snapshots.md  revision-diagnostics-for-researchers.md  using-your-own-revisioned-data.md
macrotrace/: __init__.py  _paths.py  cli.py  graphing.py
macrotrace/models/: __init__.py  db.py
macrotrace/ons_cli/: cli.py  common.py  tui.py
macrotrace/sources/: __init__.py  base.py  example.py  fred.py  ons.py  rtdsm.py
scripts/: backstop_ingest.py
tests/: test_package_init.py  test_paths.py
tests/models/: test_db_models.py
tests/ons_cli/: test_cli.py  test_common.py  test_root_cli.py  test_tui.py  utils.py
(+76 files in other folders)
