[project]
name = "macrotrace"
dynamic = ["version"]
description = "A Python library for managing and analyzing macroeconomic time series data with vintage awareness."
authors = [
    {name = "John Ramsey", email = "john@johnramsey.com"},
]
readme = "README.md"
license = { text = "GNU General Public License v3.0 or later" }
requires-python = ">=3.11"
keywords = [
    "macroeconomics",
    "time-series",
    "data-revisions",
    "economic-data",
    "vintages",
    "economics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "darts>=0.35.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "peewee>=4.0",
    "plotly>=6.0.1",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
ons-tui = [
    "rich>=13.9.4",
    "textual>=0.89.1",
]

[project.scripts]
macrotrace = "macrotrace.cli:main"
macrotrace-ons-explorer = "macrotrace.ons_cli.cli:main"
macrotrace-ons-explorer-tui = "macrotrace.ons_cli.tui:main"

[project.urls]
Homepage = "https://github.com/john-ramsey/macrotrace"
Repository = "https://github.com/john-ramsey/macrotrace"
Issues = "https://github.com/john-ramsey/macrotrace/issues"
Documentation = "https://john-ramsey.github.io/macrotrace/"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "diagrams>=0.25.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "notebook>=7.4.0",
    "pre-commit>=4.0.0",
    "pyinstrument>=5.0.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "ruff>=0.8.0",
    "textual>=0.89.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff.lint.per-file-ignores]
# Pytest fixtures are imported by name and used as function parameters,
# which ruff flags as redefinition (F811) and as unused imports (F401).
# Test helper modules (e.g. tests/.../utils.py) sometimes use
# `from X import *` to share fixtures, triggering F403/F405. F841
# (unused locals) is also expected — tests routinely bind side-effect
# calls (e.g. `releases = [Release.create(...) ...]`) to a name so the
# value is inspectable from a debugger / breakpoint. All five are
# expected in tests — DO NOT enable autofix for them in tests or
# fixture wiring / debug bindings will be silently stripped.
"tests/**/*.py" = [
    "F401",  # unused imports — pytest fixtures
    "F403",  # `from X import *` in test helper modules
    "F405",  # may-be-undefined names, paired with F403
    "F811",  # fixture argument shadows the imported fixture name
    "F841",  # unused locals — kept for debugger / breakpoint inspection
]

[tool.coverage.run]
omit = [
    "tests/*",
    "macrotrace/sources/example.py"
]

[tool.coverage.report]
fail_under = 92

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  ".local/",
  ".uv-cache/",
  ".venv/",
  "site/",
  "*.db",
  "*.db-*",
  "*.sqlite",
  "docs/",
  "mkdocs.yml",
]

[tool.uv]
package = true
